style.css
@font-face {
    font-family: GreatVibes;
    src: url(fonts/GreatVibes-Regular.ttf);
}

@font-face {
    font-family: Comfortaa;
    src: url(fonts/Comfortaa-VariableFont_wght.ttf);
}

:root {
    --color-calendar: #adb5bd;
    --color-contents: #ffffff;
    --color-background: #d9d9d9;
    --color-grid-border: #ced4da;
    --color-separator: #e9ecef;
}

body {
    background-color: var(--color-background);
    font-family: Comfortaa, sans-serif;
}

h1 {
    font-family: GreatVibes, sans-serif;
}

form {
    background-color: var(--color-contents);
    border-radius: 1rem;
}

.form-group:not(:last-of-type) {
    border-bottom: 1px solid var(--color-separator);
}

.form-text {
    font-size: 0.75rem;
}

.calendar-wrap {
    position: relative;
    width: 11rem;
}

input[name="birth_date"] {
    font-family: 'Courier New', Courier, monospace;
    background-color: initial;
}

.bi-calendar {
    position: absolute;
    top: 0.625rem;
    right: 0.75rem;
    pointer-events: none;
    fill: var(--color-calendar);
}

#result {
    background-color: var(--color-contents);
    border-radius: 1rem;
}

#result table {
    border: 1px solid var(--color-grid-border);
}

#result td {
    width: 10px;
    height: 10px;
    background-color: var(--color-contents);
}

